--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
        
        <link rel="icon" type="image/png" href="favicon.png" />
        <link rel="apple-touch-icon" href="favicon.png">
-       <meta name="apple-mobile-web-app-title" content="random number generator">
+       <meta name="apple-mobile-web-app-title" content="Random Number Generator">
        <meta name="apple-mobile-web-app-capable" content="yes">
        <meta name="apple-mobile-web-app-status-bar-style" content="black">
 
