--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
             <h1>Random # <br>
             Generator</h1>
-            <p>Cant decide the number? Click the button and it will pick for you.</p>
+            <p>Can't decide the number? Click the button, and it will pick for you.</p>
 
             <h2 id="number">#</h2>
             
